--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "prestart": "npm install",
     "dev": "nodemon app",
-    "postinstall": " node ./node_modules/bower/bin/bower install",
-    "start": "node app"
+    "postinstall": "./node_modules/bower/bin/bower install",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
