--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "express": "^4.15.1",
     "express-http-proxy": "^0.11.0",
     "moment": "^2.17.1",
+    "mongo": "^0.1.0",
+    "mongodb": "^2.2.24",
+    "mongoose": "^4.8.7",
     "request": "^2.80.0",
     "socket.io": "^1.7.3"
   },
