--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongo": "^0.1.0",
     "mongodb": "^2.2.24",
     "mongoose": "^4.8.7",
+    "pug": "^2.0.0-beta11",
     "request": "^2.80.0",
     "socket.io": "^1.7.3"
   },
