--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bower": "^1.8.0",
     "express": "^4.15.1",
     "express-http-proxy": "^0.11.0",
+    "method-override": "^2.3.7",
     "moment": "^2.18.0",
     "mongo": "^0.1.0",
     "mongodb": "^2.2.24",
