--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "angular": "^1.6.2",
     "body-parser": "^1.17.1",
     "bower": "^1.8.0",
+    "cloudinary": "^1.8.0",
     "express": "^4.15.1",
     "express-http-proxy": "^0.11.0",
     "method-override": "^2.3.7",
@@ -25,6 +26,7 @@
     "mongo": "^0.1.0",
     "mongodb": "^2.2.24",
     "mongoose": "^4.8.7",
+    "multer": "^1.3.0",
     "pug": "^2.0.0-beta11",
     "request": "^2.80.0",
     "socket.io": "^1.7.3"
