--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "body-parser": "^1.17.1",
     "bower": "^1.8.0",
     "cloudinary": "^1.8.0",
+    "del": "^2.2.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.1",
     "express-http-proxy": "^0.11.0",
     "method-override": "^2.3.7",
