--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.1",
     "express-http-proxy": "^0.11.0",
+    "hover": "^3.0.0-alpha.6",
     "method-override": "^2.3.7",
     "moment": "^2.18.0",
     "mongo": "^0.1.0",
