--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "engines": {
     "node": "6.9.4"
   },
-  "scripts": { // creamos scripts para facilitar el proceso de instalación a terceros
+  "scripts": { 
     "prestart": "npm install", 
-    "dev": "nodemon app", // nodemon nos sirve para actualizar datos del servidor y actualizar en tiempo real sin necesidad de desconectar el servidor
-    "postinstall": "./node_modules/bower/bin/bower install",  // post instalación de los módulos ignorados  
-    "start": "node app.js" // para iniciar la app
+    "dev": "nodemon app", 
+    "postinstall": "./node_modules/bower/bin/bower install",  
+    "start": "node app.js" 
   },
   "author": "", 
   "license": "ISC",
-  "dependencies": { // módulos necesarios para el funcionamiento del servidor/bd/...
+  "dependencies": { 
     "angular": "^1.6.2",
     "body-parser": "^1.17.1",
     "bower": "^1.8.0",
