--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "engines": {
     "node": "6.9.4"
   },
-  "scripts": { 
-    "prestart": "npm install", 
-    "dev": "nodemon app", 
-    "postinstall": "./node_modules/bower/bin/bower install",  
-    "start": "node app.js" 
+  "scripts": {
+    "prestart": "npm install",
+    "dev": "nodemon app",
+    "postinstall": "./node_modules/bower/bin/bower install",
+    "start": "node app.js"
   },
-  "author": "", 
+  "author": "",
   "license": "ISC",
-  "dependencies": { 
+  "dependencies": {
     "angular": "^1.6.2",
     "body-parser": "^1.17.1",
     "bower": "^1.8.0",
@@ -22,6 +22,7 @@
     "del": "^2.2.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.1",
+    "express-formidable": "^1.0.0",
     "express-http-proxy": "^0.11.0",
     "hover": "^3.0.0-alpha.6",
     "method-override": "^2.3.7",
