--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "body-parser": "^1.17.1",
     "bower": "^1.8.0",
     "cloudinary": "^1.8.0",
+    "cookie-parser": "^1.4.3",
     "del": "^2.2.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.1",
     "express-formidable": "^1.0.0",
     "express-http-proxy": "^0.11.0",
+    "express-session": "^1.15.2",
     "hover": "^3.0.0-alpha.6",
     "method-override": "^2.3.7",
     "moment": "^2.18.0",
@@ -31,6 +33,8 @@
     "mongodb": "^2.2.24",
     "mongoose": "^4.8.7",
     "multer": "^1.3.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta11",
     "request": "^2.80.0",
     "socket.io": "^1.7.3"
