--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "pug": "^2.0.0-beta11",
     "request": "^2.80.0",
     "socket.io": "^1.7.3"
