--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.17.1",
     "bower": "^1.8.0",
     "cloudinary": "^1.8.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "del": "^2.2.2",
     "dotenv": "^4.0.0",
@@ -26,6 +27,7 @@
     "express-formidable": "^1.0.0",
     "express-http-proxy": "^0.11.0",
     "express-session": "^1.15.2",
+    "flash": "^1.1.0",
     "hover": "^3.0.0-alpha.6",
     "method-override": "^2.3.7",
     "moment": "^2.18.0",
