--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "mongo": "^0.1.0",
     "mongodb": "^2.2.24",
     "mongoose": "^4.8.7",
+    "mongoose-middleware": "^1.0.0",
     "multer": "^1.3.0",
+    "nodemailer": "^4.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
